# drive-synapsis

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INSTALLATION.md  README.md  SETUP_GUIDE.md  USAGE.md  compose.yaml  pyproject.toml  run_server.sh
anamnesis/: PROJECT_LEARNINGS.md  README.md
anamnesis/.context/: active_state.md  backlog.md  mission.md  tech-stack.md
anamnesis/.context/workstreams/: .gitkeep
anamnesis/directives/: EXECUTION.md  THINKING.md
anamnesis/docs/: MIGRATION.md  VISUAL_GUIDE.md
anamnesis/specs/: options.md  problem.md  product.md  service-account-auth-implementation.md  tasks.md  tech.md
anamnesis/standards/: INDEX.md  global.md  python.md  rust.md  typescript.md
anamnesis/templates/: active_state.md  board.md  workstream.md
docs/knowledge/: Building Google Drive MCP Server.md
src/: gdrive_client.py  gdrive_client_old.py  setup_auth.py  test_sheets.py
src/drive_synapsis/: __init__.py  auth.py  config_gen.py  html_converter.py  main_server.py
src/drive_synapsis/auth/: __init__.py  credential_store.py  google_auth.py  oauth21_session_store.py  oauth_callback_server.py  oauth_config.py  scopes.py
src/drive_synapsis/client/: __init__.py  base.py  comments.py  documents.py  files.py  search.py  sharing.py  sheets.py
src/drive_synapsis/core/: __init__.py  config.py  context.py
src/drive_synapsis/server/: __init__.py  __main__.py  auth_tools.py  doc_tools.py  file_tools.py  main.py  managers.py  search_tools.py  sharing_tools.py  sheet_tools.py  sync_tools.py
tests/: integration_test.py  test_creative_features.py  test_managers.py  test_sync_tools.py
(+3 files in other folders)
