[project]
name = "drive-synapsis"
version = "0.2.0"
description = "Drive Synapsis - Google Drive MCP Server for AI Assistants"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "google-api-python-client",
    "google-auth-oauthlib",
    "python-dotenv",
    "uvicorn",
]

[project.scripts]
drive-synapsis = "drive_synapsis.main_server:main"
drive-synapsis-config = "drive_synapsis.config_gen:main"

[tool.uv]
# Optimization for uv
